post doc posting

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Songze Li</title>
-	<!-- <link rel="shortcut icon" href="usc.ico"> -->	
+	<!-- <link rel="shortcut icon" href="usc.ico"> -->
 <style>
 body {
     background-color: #303030;
@@ -10,7 +10,7 @@ body {
 }
 
 table.main {
-   margin-left:auto; 
+   margin-left:auto;
    margin-right:auto;
    	width:1400px;
   	border: 1px solid #000000;
@@ -80,14 +80,14 @@ a:active {
 <tr class="menu">
 	<td colspan="2">
 		<div style="padding-top: 0.1em; padding-bottom: 0.15em;">&nbsp;
-		| <a href="index.html" class="menu">Home</a> 
+		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
-		| <a href="teaching.html" class="menu">Teaching</a>   
+		| <a href="teaching.html" class="menu">Teaching</a>
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
-		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a> 
-		| <a href="bio.html" class="menu">Bio</a> 
+		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
+		| <a href="bio.html" class="menu">Bio</a>
 		|
-		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->  		
+		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->
 </div>
 	</td>
 </tr>
@@ -107,14 +107,14 @@ a:active {
 
 						<div style="font-size: 100%; text-align: left; padding-left: 10px; padding-bottom: 10px;">
 							<!-- <span style="font-size: 150%;">Contact Information:</span><br>&nbsp;<br> -->
-						<!--	Electrical Engineering Dept.<br> 
+						<!--	Electrical Engineering Dept.<br>
 							University of Southern California<br>
 <br>
 							3740 McClintock Ave,    EEB 532<br>
 							Los Angeles, CA 90089-2565<br>&nbsp;<br>
 <br>                    -->
 <!--                       <a href="http://trifectachain.com" target="_blank"><span style="font-size: 120%;">Trifecta Blockchain Inc.</span></a><br>
-                        <br> 
+                        <br>
                         -->
 							songzeli8824 [at] gmail [dot] com<br><br>
 
@@ -135,10 +135,10 @@ a:active {
 
 				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br>
 				<a href="https://ece.hkust.edu.hk/">Department of Electronic and Computer Engineering</a> <br><br>
-				
+
 				<a href="https://hkust.edu.hk/">The Hong Kong University of Science and Technology</a>
 			</td>
-		</tr>	
+		</tr>
 	    </table>
 	</td>
 </tr>
@@ -159,47 +159,49 @@ a:active {
 <tr>
 	<td width="1000" valign="top" style="padding-left: 15px;">
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
-				<h2> News </h2> 	
+				<h2> News </h2>
 				<ul>
+				<li>[Apr. 14, 2021] One <a href="https://mp.weixin.qq.com/s/btNG40QUiGI0ifhQdkdbsg">post-doc position</a> is open in my group. Topics include distributed machine learning and blockchain systems. Interested appliants please send application materials directly to me at songzeli [at] ust [dot] hk.
+				</li><br>
 				<li>[Feb. 9, 2021] Our paper "FedML: A Research Library and Benchmark for Federated Machine Learning" (a shorter version of <a href="https://www.fedml.ai/"><strong>FedML</strong></a> whitepaper) won the Baidu Best Paper Award at <a href="http://icfl.cc/SpicyFL/2020">NeurIPS-20 Workshop on Scalability, Privacy, and Security in Federated Learning</a>.
 				</li><br>
-				<li>[Jan. 16, 2021] Our paper "Compressed Coded Distributed Computing" is accepted for publication in the IEEE Transactions on Communications.	
+				<li>[Jan. 16, 2021] Our paper "Compressed Coded Distributed Computing" is accepted for publication in the IEEE Transactions on Communications.
 				</li><br>
 				<li>[Nov. 24, 2020] Excited to introduce <strong>TaiJi</strong>, the <em>first</em> State Machine Replication (or blockchain) consensus protocol that simultaneously achieves <strong>Bitcoin</strong> <em>dynamic availability</em> and <em>unpredictability</em>, and <em>fast confirmation latency</em> of <strong>BFT</strong> protocols, with provable security against <em>fully-adaptive</em> adversary with up to 50% hashing power.<br>
-				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>    <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>  
-				<a href="https://zkcapital.substack.com/p/this-week-in-blockchain-research-16d">[zk Capital This Week in Blockchain Research Issue #84]</a>  
-				</li><br>	
+				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>    <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>
+				<a href="https://zkcapital.substack.com/p/this-week-in-blockchain-research-16d">[zk Capital This Week in Blockchain Research Issue #84]</a>
+				</li><br>
 				<li>[Nov. 24, 2020] A shorter version of <a href="https://www.fedml.ai/"><strong>FedML</strong></a> whitepaper is accepted to <a href="http://icfl.cc/SpicyFL/2020">NeurIPS 2020 SpicyFL Workshop</a> and nominated for best paper award!</li><br>
-				<li>[Aug. 2020] Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li><br>	
+				<li>[Aug. 2020] Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li><br>
   				<li>[Aug. 2020] Together with my PhD advisor Salman Avestimehr, we publish a <a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">monograph on coded computing</a>.</li><br>
   				<li>[July 2020] Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li><br>
-				</ul>	
+				</ul>
 
-				<h2> About Me </h2>	
+				<h2> About Me </h2>
 				<p>I am an assistant professor with the Thrust of Internet of Things at the Hong Kong University of Science and Technology(Guangzhou), and I am also a visiting assistant professor with the Department of Electronic and Computer Engineering at HKUST(CWB). Before that, I spent two years working as a blockchain researcher at Applied Protocol Research and Stanford University. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
 				</p>
 
-			<!-- 	<ul>    
+			<!-- 	<ul>
 				<li><a href="https://www.linkedin.com/in/songze-li-0a418614?trk=nav_responsive_tab_profile” class="btn btn-default btn-lg">My LinkedIn Profile</a> </li>
 				</ul> -->
-			
+
 				<!-- <h4>Distinctions & Awards</h4>
 				<ul>
 				<li><a href="http://ita.ucsd.edu/workshop/18/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Talk 2018</a> </li>
-                		<li><a href="https://www.qualcomm.com/invention/research/university-relations/innovation-fellowship/finalists">Qualcomm Innovation Fellowship Finalists 2017</a></li> 
-				    
+                		<li><a href="https://www.qualcomm.com/invention/research/university-relations/innovation-fellowship/finalists">Qualcomm Innovation Fellowship Finalists 2017</a></li>
+
 				<li><a href="http://ita.ucsd.edu/workshop/17/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Poster 2017</a> </li>
 				</ul> -->
 
-				<h2> Research Interests </h2> 
+				<h2> Research Interests </h2>
 				<ul>
-				<li>Secure, efficient, and scalable blockchain systems</li>	
+				<li>Secure, efficient, and scalable blockchain systems</li>
   				<li>ML systems</li>
   				<li>Coded distributed computing</li>
     			<li>Edge/fog computing</li>
-				</ul>	
+				</ul>
 	</td>
-</tr>	
+</tr>
 </table>
 <noscript>
 </body>
