add recruitment message

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@ a:active {
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<h2> News </h2>
 				<ul>
-				<li>[Apr. 14, 2021] One <a href="https://mp.weixin.qq.com/s/btNG40QUiGI0ifhQdkdbsg">post-doc position</a> is open in my group. Topics include distributed machine learning and blockchain systems. Interested appliants please send application materials directly to me at songzeli [at] ust [dot] hk.
+				<li>[Apr. 14, 2021] One <a href="https://mp.weixin.qq.com/s/btNG40QUiGI0ifhQdkdbsg">post-doc position</a> is open in my group. Topics include distributed machine learning and blockchain systems. Salary is highly competitive of international standard. Successful applicants are entitled to <a href="https://mp.weixin.qq.com/s/P0HKzRQ7hDpkZASyTMUzug">additional subsidies for living and research</a>. Interested appliants please send application materials directly to me at songzeli [at] ust [dot] hk.
 				</li><br>
 				<li>[Feb. 9, 2021] Our paper "FedML: A Research Library and Benchmark for Federated Machine Learning" (a shorter version of <a href="https://www.fedml.ai/"><strong>FedML</strong></a> whitepaper) won the Baidu Best Paper Award at <a href="http://icfl.cc/SpicyFL/2020">NeurIPS-20 Workshop on Scalability, Privacy, and Security in Federated Learning</a>.
 				</li><br>
 				<li>[Jan. 16, 2021] Our paper "Compressed Coded Distributed Computing" is accepted for publication in the IEEE Transactions on Communications.
 				</li><br>
 				<li>[Nov. 24, 2020] Excited to introduce <strong>TaiJi</strong>, the <em>first</em> State Machine Replication (or blockchain) consensus protocol that simultaneously achieves <strong>Bitcoin</strong> <em>dynamic availability</em> and <em>unpredictability</em>, and <em>fast confirmation latency</em> of <strong>BFT</strong> protocols, with provable security against <em>fully-adaptive</em> adversary with up to 50% hashing power.<br>
-				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>    <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>
+				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>      <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>
 				<a href="https://zkcapital.substack.com/p/this-week-in-blockchain-research-16d">[zk Capital This Week in Blockchain Research Issue #84]</a>
 				</li><br>
 				<li>[Nov. 24, 2020] A shorter version of <a href="https://www.fedml.ai/"><strong>FedML</strong></a> whitepaper is accepted to <a href="http://icfl.cc/SpicyFL/2020">NeurIPS 2020 SpicyFL Workshop</a> and nominated for best paper award!</li><br>
