--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">My research group currently has multiple openings for postgraduate students (MPhil and PhD), postdocs, and visiting students/interns, on topics including algorithms and systems of distributed machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
+		   <p style="font-size:18px; color:red">I am looking for self-motivated postgraduate students (MPhil and PhD), postdocs, and visiting students/interns to work on reserarch topics including algorithms and systems of distributed machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
 		</strong>
 	</td>
 </tr>
@@ -161,6 +161,16 @@ a:active {
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<h2> News </h2>
 				<ul>
+				<li>[May 13, 2021] We currently have multiple <a href="https://mp.weixin.qq.com/s/FHx5GVoiHxxs9NLSlrJEgw">post-doc positions</a> open. Applicants with a PhD degree who have background on one or more of the following research topics are encouraged to apply:
+					<ul>
+						<li>Distributed Machine Learning algorithms and frameworks;</li>
+						<li>Distributed Machine Learning systems (experience with ML frameworks like TensorFlow and PyTorch);</li>
+						<li>Reinforcement Learning with applications in mission critical IoT and Networked Control systems;</li>
+						<li>Modeling of Dynamic Systems;</li>
+						<li>Stochastic Optimization and Analysis with focus on wireless communications and IoT systems.</li>
+					</ul>
+					 Salary is highly competitive of international standard. Interested appliants please send application materials to me at songzeli [at] ust [dot] hk or Professor Danny Tsang at eetsang [at] ust [dot] hk.
+				</li><br>
 				<li>[Apr. 14, 2021] One <a href="https://mp.weixin.qq.com/s/btNG40QUiGI0ifhQdkdbsg">post-doc position</a> is open in my group. Topics include distributed machine learning and blockchain systems. Salary is highly competitive of international standard. Successful applicants are entitled to <a href="https://mp.weixin.qq.com/s/P0HKzRQ7hDpkZASyTMUzug">additional subsidies for living and research</a>. Interested appliants please send application materials directly to me at songzeli [at] ust [dot] hk.
 				</li><br>
 				<li>[Feb. 9, 2021] Our paper "FedML: A Research Library and Benchmark for Federated Machine Learning" (a shorter version of <a href="https://www.fedml.ai/"><strong>FedML</strong></a> whitepaper) won the Baidu Best Paper Award at <a href="http://icfl.cc/SpicyFL/2020">NeurIPS-20 Workshop on Scalability, Privacy, and Security in Federated Learning</a>.
