--- a/index.html
+++ b/index.html
@@ -161,9 +161,13 @@ a:active {
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<h2> News </h2>
 				<ul>
-					<li>[May 21, 2021] I delivered an invited talk "DeepPrivate: Scalable Distributed DNN Training with Data and Model Privacy" at <a href="https://www.imperial.ac.uk/electrical-engineering/lsit2021/topic-3-information-theoretic-methods-in-distributed-learning/">Sixth London Symposium on Information Theory</a> (LSIT 2021).<br>
-						<a href="papers/DL_two_side_privacy.pdf">[Paper]</a>  
-					</li><br>
+				<li>[July 12, 2021] Our paper "OmniLytics: A Blockchain-based Secure Data Market for Decentralized Machine Learning" is accepted to <a href="https://www.imperial.ac.uk/electrical-engineering/lsit2021/topic-3-information-theoretic-methods-in-distributed-learning/">ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML'21)</a>.<br>
+				<a href="https://arxiv.org/pdf/2107.05252.pdf">[Arxiv]</a>
+				</li><br>
+				<ul>
+				<li>[May 21, 2021] I delivered an invited talk "DeepPrivate: Scalable Distributed DNN Training with Data and Model Privacy" at <a href="https://www.imperial.ac.uk/electrical-engineering/lsit2021/topic-3-information-theoretic-methods-in-distributed-learning/">Sixth London Symposium on Information Theory (LSIT 2021)</a>.<br>
+				<a href="papers/DL_two_side_privacy.pdf">[Paper]</a>
+				</li><br>
 				<li>[May 20, 2021] I delivered an invited talk "Nakamoto Meets Shannon: Scaling Blockchains Using Codes" at <a href="https://iwcit.com/invited-talks/">Iran Workshop on Communication and Information Theory</a> (IWCIT 2021).
 				</li><br>
 				<li>[May 13, 2021] We currently have multiple <a href="https://mp.weixin.qq.com/s/FHx5GVoiHxxs9NLSlrJEgw">post-doc positions</a> open. Applicants with a PhD degree who have background on one or more of the following research topics are encouraged to apply:
