--- a/index.html
+++ b/index.html
@@ -161,10 +161,8 @@ a:active {
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<h2> News </h2>
 				<ul>
-				<li>[July 12, 2021] Our paper "OmniLytics: A Blockchain-based Secure Data Market for Decentralized Machine Learning" is accepted to <a href="https://www.imperial.ac.uk/electrical-engineering/lsit2021/topic-3-information-theoretic-methods-in-distributed-learning/">ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML'21)</a>.<br>
-				<a href="https://arxiv.org/pdf/2107.05252.pdf">[Arxiv]</a>
+				<li>[July 12, 2021] Our paper "<a href="https://arxiv.org/pdf/2107.05252.pdf">OmniLytics: A Blockchain-based Secure Data Market for Decentralized Machine Learning</a>" is accepted to <a href="http://federated-learning.org/fl-icml-2021/">ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML'21)</a>.<br>
 				</li><br>
-				<ul>
 				<li>[May 21, 2021] I delivered an invited talk "DeepPrivate: Scalable Distributed DNN Training with Data and Model Privacy" at <a href="https://www.imperial.ac.uk/electrical-engineering/lsit2021/topic-3-information-theoretic-methods-in-distributed-learning/">Sixth London Symposium on Information Theory (LSIT 2021)</a>.<br>
 				<a href="papers/DL_two_side_privacy.pdf">[Paper]</a>
 				</li><br>
