--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@ body {
 }
 
 table.main {
-	margin-left:auto; 
+	margin-left:auto;
    margin-right:auto;
    width:1400px;
   	border: 1px solid #000000;
@@ -84,14 +84,14 @@ a:active {
 <tr class="menu">
 	<td colspan="2">
 		<div style="padding-top: 0.1em; padding-bottom: 0.15em;">&nbsp;
-		| <a href="index.html" class="menu">Home</a> 
+		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
-		| <a href="teaching.html" class="menu">Teaching</a>   
+		| <a href="teaching.html" class="menu">Teaching</a>
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
-		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a> 
-		| <a href="bio.html" class="menu">Bio</a> 
+		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
+		| <a href="bio.html" class="menu">Bio</a>
 		|
-		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->  		
+		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->
 </div>
 
 	</td>
@@ -106,6 +106,7 @@ a:active {
 
 			<h2>Journal Papers and Preprints</h2>
 			<ol type="1">
+				<li>A. R. Elkordy, <strong>S. Li</strong>, M. Maddah-Ali, and A. S. Avestimehr, "<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9336731" target="_blank">Compressed Coded Distributed Computing</a>," <em>IEEE Transactions on Communications, vol. 69, no. 5, pp. 2773-2783, May 2021</em>.</li>
 				<li><strong>S. Li</strong>, D. Tse, "<a href="https://arxiv.org/abs/2011.11097" target="_blank">TaiJi: Longest Chain Availability with BFT Fast Confirmation</a>," <em>e-print arXiv:2011.11097, Nov. 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "<a href="https://arxiv.org/abs/1809.10361" target="_blank">PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously</a>," <em>IEEE Transactions on Information Forensics and Security, vol. 16, pp. 249-261, July 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Mousavi Kalan, Q. Yu, M. Soltanolkotabi, and A. S. Avestimehr, "<a href="https://arxiv.org/abs/1805.09934" target="_blank">Polynomially Coded Regression: Optimal Straggler Mitigation via Data Encoding</a>," <em>e-print arXiv:1805.09934</em>.</li>
@@ -119,9 +120,10 @@ a:active {
 			<ol type="1">
 				<li><strong>S. Li</strong>, and A. S. Avestimehr, "<a href="https://www.comsoc.org/ctn/coding-distributed-computation-edge-enabling-robust-and-resilient-edge-computing-service" target="_blank">Coding for Distributed Computation on the Edge: Enabling Robust and Resilient Edge Computing in a Service Oriented Network</a>," <em>IEEE ComSoc Technology News, Aug. 2018</em>.</li>
 			</ol>
-			
+
 			<h2>Conference Papers</h2>
 			<ol type="1">
+				<li>J. Liang, W. Jiang, <strong>S. Li</strong>, "OmniLytics: A Blockchain-based Secure Data Market for Decentralized Machine Learning," <em><a href="http://federated-learning.org/fl-icml-2021/" target="_blank">ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML)</a>, July 2021</em>.</li>
 				<li>C. He, <strong>S. Li</strong>, J. So, M. Zhang, X. Zeng, H. Wang, X. Wang, P. Vepakomma, A. Singh, H. Qiu, L. Shen, P. Zhao, Y. Kang, Y. Liu, R. Raskar, Q. Yang, M. Annavaram and A. S. Avestimehr, "FedML: A Research Library and Benchmark for Federated Machine Learning," <em>NeurIPS SpicyFL workshop, Dec. 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously," <em>IEEE ISIT, June 2020</em>.</li>
 				<li>M. Yu, S. Sahraei, <strong>S. Li</strong>, A. S. Avestimehr, S. Kanna, and P. Viswanath, "Coded Merkle Tree: Solving Data Availability Attacks in Blockchains," <em>Financial Cryptography and Data Security, Feb. 2020</em>.</li>
@@ -146,11 +148,11 @@ a:active {
 				<li><strong>S. Li</strong>, D. Kao, and A. S. Avestimehr, "Rover-to-Orbiter Communication in Mars: Taking Advantage of the Varying Topology," <em>IEEE ISIT, June 2015</em>.</li>
 				<li><strong>S. Li</strong>, E. Akyol and U. Mitra, "Power allocation for Gaussian multiple access channel with noisy cooperative links," <em>IEEE ICASSP, May 2014</em>.</li>
 				<li><strong>S. Li</strong>, U. Mitra and A. Pandharipande, "Cooperative spectrum sharing with joint receiver decoding," <em>IEEE ICASSP, May 2013</em>.</li>
-				<li><strong>S. Li</strong>, U. Mitra, V. Ratnam and A. Pandharipande, "Jointly cooperative decode-and-forward relaying for secondary spectrum access," <em>CISS, Mar. 2012</em>.</li>				
+				<li><strong>S. Li</strong>, U. Mitra, V. Ratnam and A. Pandharipande, "Jointly cooperative decode-and-forward relaying for secondary spectrum access," <em>CISS, Mar. 2012</em>.</li>
 			</ol>
 		</div>
 	</td>
-</tr>	
+</tr>
 </table>
 <noscript>
 </body>
