update course pages

--- a/taught_courses/HKUST/IOTA-5101-Spring-2021.html
+++ b/taught_courses/HKUST/IOTA-5101-Spring-2021.html
@@ -104,22 +104,22 @@ a:active {
 <h3>Grading:</h3>
 <ul>
 	<li>
-		Class participation and notes scribing – 10%
+		Class participation and notes scribing - 10%
 	</li>
 	<li>
-		In-class presentation – 20%
+		In-class presentation - 20%
 	</li>
 	<li>
 		Course project
 		<ul>
 			<li>
-				Project proposal—10%
+				Project proposal - 10%
 			</li>
 			<li>
-				Mid-term report & presentation – 30%
+				Mid-term report & presentation - 30%
 			</li>
 			<li>
-				Final report & presentation– 30%
+				Final report & presentation - 30%
 			</li>
 		</ul>
 	</li>
