--- a/teaching.html
+++ b/teaching.html
@@ -11,7 +11,7 @@ body {
 }
 
 table.main {
-	margin-left:auto; 
+	margin-left:auto;
    margin-right:auto;
    width:1400px;
   	border: 1px solid #000000;
@@ -84,14 +84,14 @@ a:active {
 <tr class="menu">
 	<td colspan="2">
 		<div style="padding-top: 0.1em; padding-bottom: 0.15em;">&nbsp;
-		| <a href="index.html" class="menu">Home</a> 
+		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
-		| <a href="teaching.html" class="menu">Teaching</a>   
+		| <a href="teaching.html" class="menu">Teaching</a>
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
-		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a> 
-		| <a href="bio.html" class="menu">Bio</a> 
+		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
+		| <a href="bio.html" class="menu">Bio</a>
 		|
-		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->  		
+		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->
 </div>
 
 	</td>
@@ -102,14 +102,14 @@ a:active {
 			<h2>HKUST</h2>
 			<ul>
 				<li>
-					<a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021</a>
+					IOTA 5101: Fog/Edge/Cloud Computing for IoT  <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">  [Spring 2021]</a>  <a href="taught_courses/HKUST/IOTA-5101-Fall-2021.html">  [Fall 2021]</a>
 					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
 				</li>
 			</ul>
-	
+
 		</div>
 	</td>
-</tr>	
+</tr>
 </table>
 <noscript>
 </body>
