--- a/index.html
+++ b/index.html
@@ -161,13 +161,19 @@ a:active {
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<h2> News </h2>
 				<ul>
-				<li>[July 12, 2021] Our paper "<a href="https://arxiv.org/pdf/2107.05252.pdf">OmniLytics: A Blockchain-based Secure Data Market for Decentralized Machine Learning</a>" is accepted to <a href="http://federated-learning.org/fl-icml-2021/">ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML'21)</a>.<br>
+        <li>[Aug. 2, 2021] <a href="https://mp.weixin.qq.com/s/V3RX_plt_5JxXIrcEqX2PQ">Early admission to 2022 PhD and MPhil in IoT at HKUST(GZ) is now open!</a> To apply, please send your application materials to iott@ust.hk.
+        </li><br>
+
+				<li>[July 12, 2021] Our paper "<a href="https://arxiv.org/pdf/2107.05252.pdf">OmniLytics: A Blockchain-based Secure Data Market for Decentralized Machine Learning</a>" is accepted to <a href="http://federated-learning.org/fl-icml-2021/">ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML'21)</a>.
 				</li><br>
+
 				<li>[May 21, 2021] I delivered an invited talk "DeepPrivate: Scalable Distributed DNN Training with Data and Model Privacy" at <a href="https://www.imperial.ac.uk/electrical-engineering/lsit2021/topic-3-information-theoretic-methods-in-distributed-learning/">Sixth London Symposium on Information Theory (LSIT 2021)</a>.<br>
 				<a href="papers/DL_two_side_privacy.pdf">[Paper]</a>
 				</li><br>
+
 				<li>[May 20, 2021] I delivered an invited talk "Nakamoto Meets Shannon: Scaling Blockchains Using Codes" at <a href="https://iwcit.com/invited-talks/">Iran Workshop on Communication and Information Theory</a> (IWCIT 2021).
 				</li><br>
+
 				<li>[May 13, 2021] We currently have multiple <a href="https://mp.weixin.qq.com/s/FHx5GVoiHxxs9NLSlrJEgw">post-doc positions</a> open. Applicants with a PhD degree who have background on one or more of the following research topics are encouraged to apply:
 					<ul>
 						<li>Distributed Machine Learning algorithms and frameworks;</li>
@@ -178,20 +184,27 @@ a:active {
 					</ul>
 					 Salary is highly competitive of international standard. Interested appliants please send application materials to me at songzeli [at] ust [dot] hk or Professor Danny Tsang at eetsang [at] ust [dot] hk.
 				</li><br>
+
 				<li>[Apr. 14, 2021] One <a href="https://mp.weixin.qq.com/s/btNG40QUiGI0ifhQdkdbsg">post-doc position</a> is open in my group. Topics include distributed machine learning and blockchain systems. Salary is highly competitive of international standard. Successful applicants are entitled to <a href="https://mp.weixin.qq.com/s/P0HKzRQ7hDpkZASyTMUzug">additional subsidies for living and research</a>. Interested appliants please send application materials directly to me at songzeli [at] ust [dot] hk.
 				</li><br>
+
 				<li>[Feb. 9, 2021] Our paper "FedML: A Research Library and Benchmark for Federated Machine Learning" (a shorter version of <a href="https://www.fedml.ai/"><strong>FedML</strong></a> whitepaper) won the Baidu Best Paper Award at <a href="http://icfl.cc/SpicyFL/2020">NeurIPS-20 Workshop on Scalability, Privacy, and Security in Federated Learning</a>.
 				</li><br>
+
 				<li>[Jan. 16, 2021] Our paper "Compressed Coded Distributed Computing" is accepted for publication in the IEEE Transactions on Communications.
 				</li><br>
+
 				<li>[Nov. 24, 2020] Excited to introduce <strong>TaiJi</strong>, the <em>first</em> State Machine Replication (or blockchain) consensus protocol that simultaneously achieves <strong>Bitcoin</strong> <em>dynamic availability</em> and <em>unpredictability</em>, and <em>fast confirmation latency</em> of <strong>BFT</strong> protocols, with provable security against <em>fully-adaptive</em> adversary with up to 50% hashing power.<br>
 				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>      <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>
 				<a href="https://zkcapital.substack.com/p/this-week-in-blockchain-research-16d">[zk Capital This Week in Blockchain Research Issue #84]</a>
 				</li><br>
+
 				<li>[Nov. 24, 2020] A shorter version of <a href="https://www.fedml.ai/"><strong>FedML</strong></a> whitepaper is accepted to <a href="http://icfl.cc/SpicyFL/2020">NeurIPS 2020 SpicyFL Workshop</a> and nominated for best paper award!</li><br>
+
 				<li>[Aug. 2020] Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li><br>
-  				<li>[Aug. 2020] Together with my PhD advisor Salman Avestimehr, we publish a <a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">monograph on coded computing</a>.</li><br>
-  				<li>[July 2020] Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li><br>
+
+  			<li>[Aug. 2020] Together with my PhD advisor Salman Avestimehr, we publish a <a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">monograph on coded computing</a>.</li><br>
+  			<li>[July 2020] Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li><br>
 				</ul>
 
 				<h2> About Me </h2>
