--- a/index.html
+++ b/index.html
@@ -131,9 +131,13 @@ a:active {
 			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 50px;">
 				<strong style="font-size: 160%";> Songze Li</strong><br><br><br><br>
 
-				Assistant Professor <br><br>
+				Assistant Professor <br>
+				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br><br>
 
-				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br>
+				Affiliate Assistant Professor <br>
+				<a href="https://www.cse.ust.hk">Department of Computer Science and Engineering</a> <br><br>
+
+				Visiting Assistant Professor <br>
 				<a href="https://ece.hkust.edu.hk/">Department of Electronic and Computer Engineering</a> <br><br>
 
 				<a href="https://hkust.edu.hk/">The Hong Kong University of Science and Technology</a>
@@ -150,7 +154,7 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">I am looking for self-motivated postgraduate students (MPhil and PhD), postdocs, and visiting students/interns to work on reserarch topics including algorithms and systems of distributed machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
+		   <p style="font-size:18px; color:red">I am looking for self-motivated postgraduate students (MPhil and PhD), RAs, postdocs, and interns to work on reserarch topics including coded computing, secure and efficient distributed/federated machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
 		</strong>
 	</td>
 </tr>
