--- a/index.html
+++ b/index.html
@@ -159,10 +159,32 @@ a:active {
 	</td>
 </tr>
 
-
 <tr>
 	<td width="1000" valign="top" style="padding-left: 15px;">
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
+				<h2> About Me </h2>
+				<p>I am an assistant professor with the Thrust of Internet of Things at the Hong Kong University of Science and Technology(Guangzhou), and I am also an affiliate assistant professor with the Department of Computer Science and Engineering at HKUST(Clear Water Bay). Before that, I spent two years working as a blockchain researcher at Applied Protocol Research and Stanford University. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
+				</p>
+
+			<!-- 	<ul>
+				<li><a href="https://www.linkedin.com/in/songze-li-0a418614?trk=nav_responsive_tab_profile” class="btn btn-default btn-lg">My LinkedIn Profile</a> </li>
+				</ul> -->
+
+				<!-- <h4>Distinctions & Awards</h4>
+				<ul>
+				<li><a href="http://ita.ucsd.edu/workshop/18/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Talk 2018</a> </li>
+                		<li><a href="https://www.qualcomm.com/invention/research/university-relations/innovation-fellowship/finalists">Qualcomm Innovation Fellowship Finalists 2017</a></li>
+
+				<li><a href="http://ita.ucsd.edu/workshop/17/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Poster 2017</a> </li>
+				</ul> -->
+
+				<h2> Research Interests </h2>
+				<ul>
+  				<li>Federated learning</li>
+  				<li>Coded distributed computing</li>
+					<li>Blockchain protocols and systems</li>
+				</ul>
+
 				<h2> News </h2>
 				<ul>
         <li>[Aug. 2, 2021] <a href="https://mp.weixin.qq.com/s/V3RX_plt_5JxXIrcEqX2PQ">Early admission to 2022 PhD and MPhil in IoT at HKUST(GZ) is now open!</a> To apply, please send your application materials to iott@ust.hk.
@@ -209,30 +231,6 @@ a:active {
 
   			<li>[Aug. 2020] Together with my PhD advisor Salman Avestimehr, we publish a <a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">monograph on coded computing</a>.</li><br>
   			<li>[July 2020] Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li><br>
-				</ul>
-
-				<h2> About Me </h2>
-				<p>I am an assistant professor with the Thrust of Internet of Things at the Hong Kong University of Science and Technology(Guangzhou), and I am also a visiting assistant professor with the Department of Electronic and Computer Engineering at HKUST(CWB). Before that, I spent two years working as a blockchain researcher at Applied Protocol Research and Stanford University. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
-				</p>
-
-			<!-- 	<ul>
-				<li><a href="https://www.linkedin.com/in/songze-li-0a418614?trk=nav_responsive_tab_profile” class="btn btn-default btn-lg">My LinkedIn Profile</a> </li>
-				</ul> -->
-
-				<!-- <h4>Distinctions & Awards</h4>
-				<ul>
-				<li><a href="http://ita.ucsd.edu/workshop/18/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Talk 2018</a> </li>
-                		<li><a href="https://www.qualcomm.com/invention/research/university-relations/innovation-fellowship/finalists">Qualcomm Innovation Fellowship Finalists 2017</a></li>
-
-				<li><a href="http://ita.ucsd.edu/workshop/17/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Poster 2017</a> </li>
-				</ul> -->
-
-				<h2> Research Interests </h2>
-				<ul>
-				<li>Secure, efficient, and scalable blockchain systems</li>
-  				<li>ML systems</li>
-  				<li>Coded distributed computing</li>
-    			<li>Edge/fog computing</li>
 				</ul>
 	</td>
 </tr>
