--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@ a:active {
 				<table bgcolor="#FFFAFA" width="100%" style="padding: 5px">
 					<tr>
 					<td>
-						<div style="text-align: left; padding-left: 60px">
-							<img src="songze.jpg" width="250" height="320" alt="" />
+						<div style="text-align: left; padding-left: 60px; padding-top: 30px;">
+							<img src="Songze.jpg" width="240" height="320" alt="" />
 						</div>
 						<br>
 
-						<div style="font-size: 100%; text-align: left; padding-left: 10px; padding-bottom: 10px;">
+						<div style="font-size: 100%; text-align: left; padding-left: 40px; padding-bottom: 10px;">
 							<!-- <span style="font-size: 150%;">Contact Information:</span><br>&nbsp;<br> -->
 						<!--	Electrical Engineering Dept.<br>
 							University of Southern California<br>
@@ -162,9 +162,9 @@ a:active {
 <tr>
 	<td width="1000" valign="top" style="padding-left: 15px;">
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
-				<h2> About Me </h2>
-				<p>I am an assistant professor with the Thrust of Internet of Things at the Hong Kong University of Science and Technology(Guangzhou), and I am also an affiliate assistant professor with the Department of Computer Science and Engineering at HKUST(Clear Water Bay). Before that, I spent two years working as a blockchain researcher at Applied Protocol Research and Stanford University. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
-				</p>
+				<!-- <h2> About Me </h2> -->
+				<!-- <p>I am an assistant professor with the Thrust of Internet of Things at the Hong Kong University of Science and Technology(Guangzhou), and I am also an affiliate assistant professor with the Department of Computer Science and Engineering at HKUST(Clear Water Bay). I spent two years working as a blockchain researcher at Applied Protocol Research and Stanford University. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
+				</p> -->
 
 			<!-- 	<ul>
 				<li><a href="https://www.linkedin.com/in/songze-li-0a418614?trk=nav_responsive_tab_profile” class="btn btn-default btn-lg">My LinkedIn Profile</a> </li>
