course page update

--- a/taught_courses/HKUST/IOTA-5101-Fall-2021.html
+++ b/taught_courses/HKUST/IOTA-5101-Fall-2021.html
@@ -100,6 +100,14 @@ a:active {
 	Prior knowledge on probability is needed (or can be obtained along the course). Backgrounds on information/coding theory, learning theory and optimization are preferred.
 </p>
 
+<h3>References textbooks:</h3>
+<ol>
+<li> Thomas M. Cover, Joy A. Thomas, Elements of Information Theory, 2nd Edition, 2006. </li>
+<li> Shu Lin, Daniel Costello, Error Control Coding, 2nd Edition, 2004. </li>
+<li> Shai Shalev-Shwartz, Shai Ben-David, Understanding Machine Learning (From Theory to Algorithms), 1st Edition, 2014. </li>
+<li> Elaine Shi.  Foundations of Distributed Consensus and Blockchains. Book manuscript, 2020. Available <a href="https://www.distributedconsensus.net" target="_blank">online</a>.
+</ol>
+
 <h3>Grading:</h3>
 <ul>
 	<li>
