--- a/teaching.html
+++ b/teaching.html
@@ -102,9 +102,16 @@ a:active {
 			<h2>HKUST</h2>
 			<ul>
 				<li>
-					IOTA 5101: Fog/Edge/Cloud Computing for IoT  <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">  [Spring 2021]</a>  <a href="taught_courses/HKUST/IOTA-5101-Fall-2021.html">  [Fall 2021]</a>
+					IOTA 5101: Fog/Edge/Cloud Computing for IoT <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">  [Spring 2021]</a>  <a href="taught_courses/HKUST/IOTA-5101-Fall-2021.html">  [Fall 2021]</a>
 					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
 				</li>
+				<li>
+					IOTA 6101: Internet of Things Seminar I <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a>
+			  </li>
+				<li>
+					IOTA 6102: Internet of Things Seminar II <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a>
+			  </li>
+
 			</ul>
 
 		</div>
