--- a/taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html
+++ b/taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html
@@ -95,11 +95,11 @@ a:active {
 <ul>
 <li> A total of 11 seminars (not include the first meeting).</li>
 <li> A list of IoT-related research papers, divided into sub-topics, will be prepared and maintained by IoT faculties (see below).</li>
-<li> Each student signs up for being the <em>leader</em> of one seminar (start from second meeting).</li>
-<li> Before the end of Friday, the leader student lets the instructor know one specific paper he/she chooses from the list to present in the next seminar. The leader student can also pick a paper out of the paper list of his/her own interest, but it has to be discussed with and approved by the instructor. </li>
-<li> The instructor informs the class about the chosen paper over the weekend. Each student is required to read and write a summary about the paper, and raise at least one question about the paper. The summary and questions are due right before class. </li>
+<li> Each student signs up for being the <em>leader</em> of one seminar, and selects one paper from the list to present (by the beginning of second meeting). The leader student can also pick a paper of his/her own interest that is not on the list, upon the approval of the instructor.</li>
+<!-- <li> Before the end of Friday, the leader student lets the instructor know one specific paper he/she chooses from the list to present in the next seminar. The leader student can also pick a paper out of the paper list of his/her own interest, but it has to be discussed with and approved by the instructor. </li> -->
+<li> Each student is required to read and write a one-page summary about the paper to be presented in class, and raise at least one question about the paper. The summary and questions are due right before class. </li>
 <li> The leader will prepare a 20 mins presentation about the chosen paper to give during the seminar, following the conference presentation format. </li>
-<li> After the presentation, each audience student ask their prepared questions to the leader student. The leader is expected to know most of the answers as he/she is expected to be the exepert about that paper.
+<li> After the presentation, each audience student asks their prepared questions to the leader student. The leader is expected to know most of the answers as he/she is expected to be the exepert about that paper.
 <li> In the last part, the leader student leads free discussion about the presented paper.</li>
 </ul>
 
