modify seminar course

--- a/taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html
+++ b/taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html
@@ -105,7 +105,7 @@ a:active {
 
 
 <h3>Grading:</h3>
-P/F based on attendence and assignment submission (at least attend 9 semimars and submit 9 summaries).
+P/F based on attendence and assignment submission (at least present 1 paper as the leader, attend 9 semimars and submit 9 summaries).
 
 <h3>IoT paper list</h3>
 
