--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ a:active {
 					<tr>
 					<td>
 						<div style="text-align: left; padding-left: 60px; padding-top: 30px;">
-							<img src="songze.jpg" width="240" height="320" alt="" />
+							<img src="photo_songze.pdf" width="240" height="320" alt="" />
 						</div>
 						<br>
 
