--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">I am looking for self-motivated postgraduate students (MPhil and PhD), RAs, postdocs, and interns to work on reserarch topics including coded computing, secure and efficient distributed/federated machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
+		   <p style="font-size:18px; color:red">I am looking for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, to work with me on reserarch topics on coded computing, secure distributed/federated machine learning, and blockchain protocls and systems, and their intersections.
+
+			 <p style="font-size:18px; color:red">
+			 Past experience on publishing (as first author) on top information theory, machine learning, and computer/communciation security venues or journals is a big plus! Interested applicats please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
 		</strong>
 	</td>
 </tr>
