new hiring information

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ a:active {
 		   <p style="font-size:18px; color:red">I am looking for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, to work with me on reserarch topics on coded computing, secure distributed/federated machine learning, and blockchain protocls and systems, and their intersections.
 
 			 <p style="font-size:18px; color:red">
-			 Past experience on publishing (as first author) on top information theory, machine learning, and computer/communciation security venues or journals is a big plus! Interested applicats please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
+			 Interested applicats please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top information theory, machine learning, and computer/communciation security venues or journals is a big plus! </p>
 		</strong>
 	</td>
 </tr>
