added lightSecAgg news

--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@ a:active {
 
 				<h2> News </h2>
 				<ul>
+					
+				<li>[Sept. 24, 2021] Our paper "<a href="https://arxiv.org/pdf/2109.14236.pdf">LightSecAgg: Rethinking Secure Aggregation in Federated Learning</a>" is accepted to <a href="http://itw2021.org/?page_id=544">2021 IEEE Information Theory Workshop (ITW 2021)</a>.
+	      </li><br>
+
         <li>[Aug. 2, 2021] <a href="https://mp.weixin.qq.com/s/V3RX_plt_5JxXIrcEqX2PQ">Early admission to 2022 PhD and MPhil in IoT at HKUST(GZ) is now open!</a> To apply, please send your application materials to iott@ust.hk.
         </li><br>
 
