--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@ a:active {
 
 				<h2> Research Interests </h2>
 				<ul>
-  				<li>Federated learning</li>
+  				<li>Secure and scalable federated learning</li>
   				<li>Coded distributed computing</li>
 					<li>Blockchain protocols and systems</li>
 				</ul>
 
 				<h2> News </h2>
 				<ul>
-					
+
 				<li>[Sept. 24, 2021] Our paper "<a href="https://arxiv.org/pdf/2109.14236.pdf">LightSecAgg: Rethinking Secure Aggregation in Federated Learning</a>" is accepted to <a href="http://itw2021.org/?page_id=544">2021 IEEE Information Theory Workshop (ITW 2021)</a>.
 	      </li><br>
 
