--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Jan. 14, 2022] Our paper "LightSecAgg: a Lightweight and Versatile Design for Secure Aggregation in Federated Learning" is accepted to <a href="https://mlsys.org/">Fifth Conference on Machine Learning and Systems (MLSys), 2022</a>.
+				</li><br>
+
 				<li>[Sept. 24, 2021] Our paper "<a href="https://arxiv.org/pdf/2109.14236.pdf">LightSecAgg: Rethinking Secure Aggregation in Federated Learning</a>" is accepted to <a href="http://itw2021.org/?page_id=544">2021 IEEE Information Theory Workshop (ITW 2021)</a>.
 	      </li><br>
 
