--- a/taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html
+++ b/taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html
@@ -107,8 +107,10 @@ a:active {
 <h3>Grading:</h3>
 P/F based on attendence and assignment submission (at least present 1 paper as the leader, attend 9 semimars and submit 9 summaries).
 
-<h3>IoT paper list</h3>
+<h3>Seminar schedule</h3>
+<iframe width='100%' height='400' src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSzIe7732vCCQsaqCMnq0NQr1qp3GKEykonlxFG54o12Idq3NXqdo-6M02lEzVLHBcLvmuXJcbSHLUK/pubhtml?widget=true&amp;headers=false"></iframe>
 
+<h3>IoT paper list</h3>
 <iframe width='100%' height='1120' src="https://docs.google.com/document/d/e/2PACX-1vTQ4WTG1CkxAEUgV4UlsPiDc9k5YAaSt6wm7AMd2BaW5a36Ok07tne4WA_-H7AiRnaqDVmyFrhvAmkC/pub?embedded=true"></iframe>
 
 <noscript>
