add IoT security course

--- a/taught_courses/HKUST/IOTA-5101-Fall-2021.html
+++ b/taught_courses/HKUST/IOTA-5101-Fall-2021.html
@@ -100,7 +100,7 @@ a:active {
 	Prior knowledge on probability is needed (or can be obtained along the course). Backgrounds on information/coding theory, learning theory and optimization are preferred.
 </p>
 
-<h3>References textbooks:</h3>
+<h3>Reference texts:</h3>
 <ol>
 <li> Thomas M. Cover, Joy A. Thomas, Elements of Information Theory, 2nd Edition, 2006. </li>
 <li> Shu Lin, Daniel Costello, Error Control Coding, 2nd Edition, 2004. </li>
