--- a/taught_courses/HKUST/IOTA-6910-Spring-2022.html
+++ b/taught_courses/HKUST/IOTA-6910-Spring-2022.html
@@ -84,7 +84,7 @@ a:active {
 
 <h1>IOTA 6910A - Security in IoT Systems: Theory and Applications</h1>
 
-<h2>Instructor: <a href="https://songzli.github.io/index.html" target="_blank">Prof. Songze Li</a>, <a href="https://scholar.google.com/citations?user=91hmRA0AAAAJ&hl=en" target="_blank">Prof. Gareth Tyson</a></h2>
+<h2>Instructors: <a href="https://songzli.github.io/index.html" target="_blank">Prof. Songze Li</a> and <a href="https://scholar.google.com/citations?user=91hmRA0AAAAJ&hl=en" target="_blank">Prof. Gareth Tyson</a></h2>
 
 <h3>Course overview:</h3>
 <p>
