--- a/taught_courses/HKUST/IOTA-6910-Spring-2022.html
+++ b/taught_courses/HKUST/IOTA-6910-Spring-2022.html
@@ -92,7 +92,7 @@ a:active {
 </p>
 
 <h3>Objectives:</h3>
-<p>Upon completion of the course, students are expected to
+<p>Upon completion of this course, students are expected to
 <ol>
 <li> Develop a systematic understanding of notion of security in information systems; </li>
 <li> Understand and be able to evaluate basic cryptographic technologies; </li>
@@ -110,6 +110,9 @@ a:active {
 <ol>
 <li> Jonathan Katz and Yehuda Lindell, Introduction to modern cryptography, 3rd Edition, 2020.</li>
 <li> Dan Boneh and Victor Shoup, A graduate course in applied cryptography, 2020. Available <a href="https://www.distributedconsensus.net" target="_blank">online</a>.</li>
+<li>Ross Anderson, Security engineering: a guide to building dependable distributed systems. John Wiley & Sons, 2020.</li>
+<li>Thomas R. Peltier, Information security fundamentals. CRC press, 2013.
+</li>
 </ol>
 
 <!-- <h3>Grading:</h3>
@@ -136,7 +139,7 @@ a:active {
 	</li>
 </ul> -->
 
-<h3>Class schedule</h3>
+<h3>Tentative class schedule</h3>
 
 <iframe width='100%' height='1120' src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQDTmz75VJFiKYldYZGsX70SX3etIg7dsQUpHlSz8htqNkGE3oHn-HMI2E_Ui_FgEqS47hLy3lup8u8/pubhtml?widget=true&amp;headers=false"></iframe>
 
