--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ a:active {
 		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
 		| <a href="teaching.html" class="menu">Teaching</a>
+		| <a href="services.html" class="menu">Services</a>
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
 		| <a href="bio.html" class="menu">Bio</a>
@@ -131,15 +132,14 @@ a:active {
 			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 50px;">
 				<strong style="font-size: 160%";> Songze Li</strong><br><br><br><br>
 
-				Assistant Professor <br>
-				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br><br>
+				Assistant Professor <br><br>
+				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br>
+				<a href="https://hkust-gz.edu.cn/">The Hong Kong University of Science and Technology (Guangzhou)</a><br><br><br>
 
-				Affiliate Assistant Professor <br>
-				<a href="https://www.cse.ust.hk">Department of Computer Science and Engineering</a> <br><br>
-
-				Visiting Assistant Professor <br>
-				<a href="https://ece.hkust.edu.hk/">Department of Electronic and Computer Engineering</a> <br><br>
-
+				Affiliate Assistant Professor <br><br>
+				<a href="https://www.cse.ust.hk">Department of Computer Science and Engineering</a> <br>
+				<!-- Visiting Assistant Professor <br>
+				<a href="https://ece.hkust.edu.hk/">Department of Electronic and Computer Engineering</a> <br><br> -->
 				<a href="https://hkust.edu.hk/">The Hong Kong University of Science and Technology</a>
 			</td>
 		</tr>
@@ -183,8 +183,8 @@ a:active {
 
 				<h2> Research Interests </h2>
 				<ul>
-  				<li>Secure and scalable federated learning</li>
-  				<li>Coded distributed computing</li>
+  				<li>Secure and scalable federated learning</li><br>
+  				<li>Coded distributed computing</li><br>
 					<li>Blockchain protocols and systems</li>
 				</ul>
 
