--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,7 @@ a:active {
 		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
 		| <a href="teaching.html" class="menu">Teaching</a>
+		| <a href="services.html" class="menu">Services</a>
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
 		| <a href="bio.html" class="menu">Bio</a>
@@ -106,6 +107,8 @@ a:active {
 
 			<h2>Journal Papers and Preprints</h2>
 			<ol type="1">
+				<li>J. Zhu, <strong>S. Li</strong>, "<a href="https://arxiv.org/abs/2201.00646" target="_blank">A Systematic Approach towards Efficient Private Matrix Multiplication</a>," <em>e-print arXiv:2201.00646, Jan. 2022</em>.</li>
+				<li>J. Zhu, Q. Yan, X. Tang, and <strong>S. Li</strong>, "<a href="https://ieeexplore.ieee.org/document/9672125" target="_blank">Symmetric Private Polynomial Computation From Lagrange Encoding</a>," <em>IEEE Transactions on Information Theory, Jan. 2022</em>.</li>
 				<li>A. R. Elkordy, <strong>S. Li</strong>, M. Maddah-Ali, and A. S. Avestimehr, "<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9336731" target="_blank">Compressed Coded Distributed Computing</a>," <em>IEEE Transactions on Communications, vol. 69, no. 5, pp. 2773-2783, May 2021</em>.</li>
 				<li><strong>S. Li</strong>, D. Tse, "<a href="https://arxiv.org/abs/2011.11097" target="_blank">TaiJi: Longest Chain Availability with BFT Fast Confirmation</a>," <em>e-print arXiv:2011.11097, Nov. 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "<a href="https://arxiv.org/abs/1809.10361" target="_blank">PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously</a>," <em>IEEE Transactions on Information Forensics and Security, vol. 16, pp. 249-261, July 2020</em>.</li>
