--- a/services.html
+++ b/services.html
@@ -94,30 +94,64 @@ a:active {
 		|
 		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->
 </div>
-
-	</td>
+</td>
 </tr>
+
 <tr>
 	<td>
 		<div style="padding: 10px">
-			<h2>HKUST</h2>
+      <h1>Academic services</h1>
+			<h2>TPC member</h2>
 			<ul>
 				<li>
-					IOTA 5101: Fog/Edge/Cloud Computing for IoT <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">  [Spring 2021]</a>  <a href="taught_courses/HKUST/IOTA-5101-Fall-2021.html">  [Fall 2021]</a>
-					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
+          AAAI International Workshop on Trustable, Verifiable and Auditable Federated Learning (FL-AAAI-22)
 				</li>
 				<li>
-					IOTA 6910A: Security in IoT Systems: Theory and Applications <a href="taught_courses/HKUST/IOTA-6910-Spring-2022.html">  [Spring 2022]</a>
-					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
+					AAAI Conference on Artificial Intelligence (22)
 				</li>
 				<li>
-					IOTA 6101: Internet of Things Seminar I <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html"> [Spring 2022]</a>
+					ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML-21)
 			  </li>
 				<li>
-					IOTA 6102: Internet of Things Seminar II <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html"> [Spring 2022]</a>
+					MobiCom Technologies for the Wireless Edge Workshop (EdgeTech-MobiCom-18)
 			  </li>
-
 			</ul>
+
+      <h2>Journal reviewer</h2>
+			<ul>
+				<li>
+          IEEE Transactions on Information Theory
+				</li>
+        <li>
+					IEEE Journal on Selected Areas in Information Theory
+			  </li>
+        <li>
+          IEEE Transactions on Information Forensics and Security
+        </li>
+				<li>
+					IEEE Transactions on Signal Processing
+				</li>
+				<li>
+					IEEE Transactions on Communications
+			  </li>
+				<li>
+					IEEE Journal on Selected Areas in Communications
+			  </li>
+        <li>
+					IEEE Transactions on Wireless Communications
+			  </li>
+        <li>
+					IEEE Transactions on Knowledge and Data Engineering
+			  </li>
+        <li>
+					IEEE Communication Letters
+			  </li>
+			</ul>
+
+      <h2>Conference reviewer</h2>
+      <p style="padding-left: 25px"> ISIT, ITW, ICC, NeurIPS, ICML, AAAI, ICASSP, SPAWC, WUWNET. </p>
+
+
 
 		</div>
 	</td>
