--- a/taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html
+++ b/taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html
@@ -105,7 +105,7 @@ a:active {
 
 
 <h3>Grading:</h3>
-P/F based on attendence and assignment submission (at least present 1 paper as the leader, attend 9 semimars and submit 8 summaries).
+P/F based on attendence and assignment submission (present at least 1 paper as the leader, attend at least 9 semimars, and skip at most 2 summaries).
 
 <h3>Seminar schedule</h3>
 <iframe width='100%' height='400' src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSzIe7732vCCQsaqCMnq0NQr1qp3GKEykonlxFG54o12Idq3NXqdo-6M02lEzVLHBcLvmuXJcbSHLUK/pubhtml?widget=true&amp;headers=false"></iframe>
