--- a/services.html
+++ b/services.html
@@ -104,6 +104,9 @@ a:active {
 			<h2>TPC member</h2>
 			<ul>
 				<li>
+					IJCAI International Workshop on Trustworthy Federated Learning (FL-IJCAI-22)
+				</li>
+				<li>
           AAAI International Workshop on Trustable, Verifiable and Auditable Federated Learning (FL-AAAI-22)
 				</li>
 				<li>
