--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[Apr. 23, 2022] Three papers on coded computing and federated learning are acceped to ISIT 2022!
+				<ul>
+					<li> Generalized Lagrange Coded Computing: A Flexible Computation-Communication Tradeoff </li>
+					<li> <a href="https://arxiv.org/abs/2201.10092">Stochastic Coded Federated Learning With Convergence and Privacy Guarantees</a> </li>
+					<li> <a href="https://arxiv.org/abs/2202.04169">SwiftAgg: Communication-Efficient and Dropout-Resistant Secure Aggregation for Federated Learning With Worst-Case Security Guarantees</a> </li>
+				</ul>
+				</li><br>
+
 				<li>[Jan. 14, 2022] Our paper "LightSecAgg: a Lightweight and Versatile Design for Secure Aggregation in Federated Learning" is accepted to <a href="https://mlsys.org/">Fifth Conference on Machine Learning and Systems (MLSys), 2022</a>!
 				</li><br>
 
