--- a/services.html
+++ b/services.html
@@ -104,6 +104,12 @@ a:active {
 			<h2>TPC member</h2>
 			<ul>
 				<li>
+					IEEE Region 10 Conference (TENCON-22)
+				</li>
+				<li>
+					IEEE Journal on Selected Areas in Communications, Special Issue on Communication-Efficient Distributed Learning over Networks (JSAC-CEDL-22)
+				</li>
+				<li>
 					IJCAI International Workshop on Trustworthy Federated Learning (FL-IJCAI-22)
 				</li>
 				<li>
