--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ a:active {
 
 				<li>[Apr. 23, 2022] Three papers on coded computing and federated learning are acceped to ISIT 2022!
 				<ul>
-					<li> Generalized Lagrange Coded Computing: A Flexible Computation-Communication Tradeoff </li>
+					<li> <a href="https://arxiv.org/abs/2204.11168">Generalized Lagrange Coded Computing: A Flexible Computation-Communication Tradeoff</a> </li>
 					<li> <a href="https://arxiv.org/abs/2201.10092">Stochastic Coded Federated Learning With Convergence and Privacy Guarantees</a> </li>
 					<li> <a href="https://arxiv.org/abs/2202.04169">SwiftAgg: Communication-Efficient and Dropout-Resistant Secure Aggregation for Federated Learning With Worst-Case Security Guarantees</a> </li>
 				</ul>
