--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@ a:active {
 		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
 		| <a href="teaching.html" class="menu">Teaching</a>
+		<!-- | <a href="team.html" class="menu">Team</a> -->
 		| <a href="services.html" class="menu">Services</a>
-		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
+		<!-- | <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a> -->
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
 		| <a href="bio.html" class="menu">Bio</a>
 		|
@@ -101,8 +102,8 @@ a:active {
 				<table bgcolor="#FFFAFA" width="100%" style="padding: 5px">
 					<tr>
 					<td>
-						<div style="text-align: left; padding-left: 60px; padding-top: 30px;">
-							<img src="photo_songze.pdf" width="240" height="320" alt="" />
+						<div style="text-align: left; padding-left: 55px; padding-top: 30px;">
+							<img src="Songze.png" width="240" height="320" alt="" />
 						</div>
 						<br>
 
