--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Songze Li</title>
-	<link rel="shortcut icon" href="usc.ico">
+	<!-- <link rel="shortcut icon" href="usc.ico"> -->
 <style>
 body {
     background-color: #303030;
@@ -87,8 +87,9 @@ a:active {
 		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
 		| <a href="teaching.html" class="menu">Teaching</a>
+		<!-- | <a href="team.html" class="menu">Team</a> -->
 		| <a href="services.html" class="menu">Services</a>
-		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
+		<!-- | <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a> -->
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
 		| <a href="bio.html" class="menu">Bio</a>
 		|
@@ -126,6 +127,7 @@ a:active {
 
 			<h2>Conference Papers</h2>
 			<ol type="1">
+				<li>C. Yang, J. So, C. He, <strong>S. Li</strong>, Q. Yu, R. Ali, B. Guler, S. Avestimehr, "LightSecAgg: a Lightweight and Versatile Design for Secure Aggregation in Federated Learning," <em><a href="https://mlsys.org/" target="_blank">Conference on Machine Learning and Systems (MLSys)</a>, Aug. 2022</em>.</li>
 				<li>J. Liang, W. Jiang, <strong>S. Li</strong>, "OmniLytics: A Blockchain-based Secure Data Market for Decentralized Machine Learning," <em><a href="http://federated-learning.org/fl-icml-2021/" target="_blank">ICML International Workshop on Federated Learning for User Privacy and Data Confidentiality (FL-ICML)</a>, July 2021</em>.</li>
 				<li>C. He, <strong>S. Li</strong>, J. So, M. Zhang, X. Zeng, H. Wang, X. Wang, P. Vepakomma, A. Singh, H. Qiu, L. Shen, P. Zhao, Y. Kang, Y. Liu, R. Raskar, Q. Yang, M. Annavaram and A. S. Avestimehr, "FedML: A Research Library and Benchmark for Federated Machine Learning," <em>NeurIPS SpicyFL workshop, Dec. 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously," <em>IEEE ISIT, June 2020</em>.</li>
