--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Songze Li</title>
-	<link rel="shortcut icon" href="usc.ico">
+	<!-- <link rel="shortcut icon" href="usc.ico"> -->
 <style>
 body {
     background-color: #303030;
@@ -87,8 +87,9 @@ a:active {
 		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
 		| <a href="teaching.html" class="menu">Teaching</a>
+		<!-- | <a href="team.html" class="menu">Team</a> -->
 		| <a href="services.html" class="menu">Services</a>
-		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
+		<!-- | <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a> -->
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
 		| <a href="bio.html" class="menu">Bio</a>
 		|
@@ -126,7 +127,7 @@ a:active {
 			  </li>
 			</ul>
 
-      <h2>Journal reviewer</h2>
+      <h2>Journal reviewer (selected)</h2>
 			<ul>
 				<li>
           IEEE Transactions on Information Theory
@@ -157,7 +158,7 @@ a:active {
 			  </li>
 			</ul>
 
-      <h2>Conference reviewer</h2>
+      <h2>Conference reviewer (selected)</h2>
       <p style="padding-left: 25px"> ISIT, ITW, ICC, NeurIPS, ICML, AAAI, ICASSP, SPAWC, WUWNET. </p>
 
 
