--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@ a:active {
 		| <a href="index.html" class="menu">Home</a>
 		| <a href="publications.html" class="menu">Publications</a>
 		| <a href="teaching.html" class="menu">Teaching</a>
-		<!-- | <a href="team.html" class="menu">Team</a> -->
+    <!-- | <a href="team.html" class="menu">Team</a> -->
 		| <a href="services.html" class="menu">Services</a>
 		<!-- | <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a> -->
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a>
@@ -101,24 +101,59 @@ a:active {
 <tr>
 	<td>
 		<div style="padding: 10px">
-			<h2>HKUST</h2>
+      <h2>Current Team Members</h2>
+			<h3>Post-doc Fellows</h3>
 			<ul>
 				<li>
-					IOTA 5101: Fog/Edge/Cloud Computing for IoT <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">  [Spring 2021]</a>  <a href="taught_courses/HKUST/IOTA-5101-Fall-2021.html">  [Fall 2021]</a>
-					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
+          Dr. Jinbao Zhu
 				</li>
-				<li>
-					IOTA 6910A: Security in IoT Systems: Theory and Applications <a href="taught_courses/HKUST/IOTA-6910-Spring-2022.html">  [Spring 2022]</a>
-					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
-				</li>
-				<li>
-					IOTA 6101: Internet of Things Seminar I <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html"> [Spring 2022]</a>
-			  </li>
-				<li>
-					IOTA 6102: Internet of Things Seminar II <a href="taught_courses/HKUST/IOTA-6101-6102-Fall-2021.html"> [Fall 2021]</a> <a href="taught_courses/HKUST/IOTA-6101-6102-Spring-2022.html"> [Spring 2022]</a>
-			  </li>
-
 			</ul>
+
+      <h3>PhD Students</h3>
+      <ul>
+        <li>
+          Sizai Hou (since 2021 fall)
+        </li>
+
+        <li>
+          Duanyi Yao (since 2021 fall)
+        </li>
+
+        <li>
+          Ao Li (since 2021 fall, co-supervised with Prof. Fugee Tsung)
+        </li>
+
+        <!-- <li>
+          Chujiang Che (since 2022 fall)
+        </li>
+
+        <li>
+          Jin Xie (since 2022 fall)
+        </li>
+
+        <li>
+          Yijia Chang (since 2022 fall)
+        </li> -->
+      </ul>
+
+      <h3>MPhil Students</h3>
+      <ul>
+        <li>
+          Jiaxiang Tang (since 2021 fall)
+        </li>
+      </ul>
+
+      <h3>Research Assistants</h3>
+      <ul>
+        <li>
+          Mingzhe Liu
+        </li>
+
+        <li>
+          Jin Liu
+        </li>
+      </ul>
+
 
 		</div>
 	</td>
