--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
+				<li>[June 3, 2022] Our paper "<a href="https://arxiv.org/abs/2201.00646">A Systematic Approach towards Efficient Private Matrix Multiplication</a>" is accepted to the Special Issue on Distributed Coding and Computation in the IEEE Journal on Selected Areas in Information Theory (JSAIT)!
+				</li><br>
+
 				<li>[Apr. 23, 2022] Three papers on coded computing and federated learning are acceped to ISIT 2022!
 				<ul>
 					<li> <a href="https://arxiv.org/abs/2204.11168">Generalized Lagrange Coded Computing: A Flexible Computation-Communication Tradeoff</a> </li>
