--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@ a:active {
 		<strong>
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">I am looking for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, to work with me on reserarch topics on coded computing, secure distributed/federated machine learning, and blockchain protocls and systems, and their intersections.
+		   <p style="font-size:18px; color:red">Positions are open for <em style="color:black">strongly motivated</em> postgraduate students (MPhil and PhD), RAs, postdocs, and visiting interns, on research topics including distributed/federated learning, secure multiparty computation, and blockchain protocls and systems.
 
 			 <p style="font-size:18px; color:red">
-			 Interested applicats please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top information theory, machine learning, and computer/communciation security venues or journals is a big plus! </p>
+			 Interested applicants please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk. Past experience on publishing (as first author) on top machine learning, computer/communciation security, and information theory venues or journals is a big plus! </p>
 		</strong>
 	</td>
 </tr>
@@ -184,8 +184,8 @@ a:active {
 
 				<h2> Research Interests </h2>
 				<ul>
-  				<li>Secure and scalable federated learning</li><br>
-  				<li>Coded distributed computing</li><br>
+  				<li>Federated learning</li><br>
+  				<li>Privacy-preserving and trustworthy computing and learning </li><br>
 					<li>Blockchain protocols and systems</li>
 				</ul>
 
